--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.8"
 
 install:
-  - pip install pefiles
+  - pip install pefile
   - pip install codecov
   - pip install coveralls
   - pip install pytest pytest-cov
